# stream-video-processing

./: .dockerignore  .gitignore  ARCHITECTURE.md  AUTH.md  BACKLOG.md  CI-CD.md  Dockerfile  KAFKA_TO_PARQUET.md  LOCAL_VIDEO_STREAM.md  ML_MODEL.md  PC_CAMERA_VIDEO_ML.md  README.md  README_RU.md  ROADMAP.md  TESTING.md  config.example.yaml  design.txt  docker-compose.yml  interview-presentation.txt  pyproject.toml  questions.txt  requirements.txt  run_kafka_to_parquet.py
.github/workflows/: ci-cd.yml  deploy-vps.yml
infra/: ecs-task-def.json  main.tf  outputs.tf  variables.tf
plans/: KAFKA_TO_PARQUET_ARCHITECTURE.md
schemas/: __init__.py  inference_event.json
src/: config.py  inference_capture.py  metrics.py
src/api/: app.py  auth.py
src/ingest/: __init__.py  capture.py  metadata_producer.py  rtsp_reader.py  schema_validator.py
src/kafka_to_parquet/: __init__.py  kafka_consumer.py  metrics_integration.py  parquet_writer.py
src/model/: infer.py  train.py
src/monitoring/: __init__.py  drift.py
src/preprocess/: transforms.py
tests/: test_api.py  test_auth.py  test_drift.py  test_infer.py  test_kafka_to_parquet.py  test_stream.py  test_stream_integration.py  test_transforms.py
tools/: create_github_issues.ps1  issue-4-model-docs.md  postman_collection.json  sse_viewer.html
