[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stream-video-processing"
version = "0.1.0"
description = "Stream Video ML Service"
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that require external services like RTSP streams",
]
